--- a/estilos.css
+++ b/estilos.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Protest+Revolution&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Madimi+One&display=swap');
 *{
     margin: 0;
     padding: 0;
@@ -31,4 +32,60 @@ a{
 .nav-item{
     display: flex;
     justify-content: end !important;
+}
+.call1{
+    text-align: center;
+    font-family: "Madimi One", sans-serif;
+    padding: 20%;
+}
+.call1 a{
+    color: black;
+    text-decoration: none;
+    padding: 10px 20px;
+    background-color: blue;
+    border-radius: 10px;
+}
+.call1 h1{
+    color: black;
+    margin-bottom: 20px;
+    /* font-size: 60px; */
+}
+.primera{
+    display: grid;
+    grid-template-columns: 1fr;
+    text-align: center;
+    padding: 50px;
+    /* font-family: 'Bebas Neue', sans-serif; */
+}
+.primera i{
+    font-size: 100px;
+    padding: 10px;
+}
+.primera h2{
+    padding: 20px;
+    font-family: "Madimi One", sans-serif;
+}
+.sec1{
+    padding: 25px;
+}
+.tercera{
+    display: grid;
+    grid-template-columns: 1fr;
+    text-align: center;
+    padding: 50px;
+    /* font-family: 'Bebas Neue', sans-serif; */
+}
+.tercera h2{
+    padding: 20px;
+    font-family: "Madimi One", sans-serif;
+}
+.sec3{
+    border: 5px solid #9c9c9c;
+    border-radius: 10px;
+    padding: 15px;
+    margin-top: 30px;
+}
+.tercera i{
+    font-size: 100px;
+    padding: 10px;
 }
