--- a/estilos.css
+++ b/estilos.css
@@ -89,3 +89,31 @@ a{
     font-size: 100px;
     padding: 10px;
 }
+footer{
+    color: black;
+    background-color: #9c9c9c;
+    font-size: 20px;
+    text-align: center;
+    width: 100%;
+    height: 200px;
+}
+footer img{
+    height: 90px;
+    width: 90px;
+    margin-top: 10px;
+}
+footer p{
+    font-size: 15px;
+    font-family: 'Poppins', 'sans-serif';
+    font-weight: bold;
+}
+footer h4{
+    color: black;
+    font-size: 15px;
+    font-family: 'Protest Revolution', 'sans-serif';
+}
+.redes i{
+    color: blue;
+    text-decoration: none;
+    margin-bottom: 10px;
+}
