--- a/estilos.css
+++ b/estilos.css
@@ -126,3 +126,17 @@ footer h4{
     text-align: center;
     padding: 20px;
 }
+/* Acerca De */
+.textoaceraDe{
+    text-align: center;
+    font-size: 20px;
+    padding-top: 60px;
+}
+.footerAcerca{
+    margin-top: 300px;
+}
+h2{
+    text-align: center;
+    font-family: "Madimi One", sans-serif;
+    padding-top: 50px;
+}
