--- a/estilos.css
+++ b/estilos.css
@@ -126,7 +126,7 @@ footer h4{
     text-align: center;
     padding: 20px;
 }
-/* Acerca De */
+/* ACERCA DE */
 .textoaceraDe{
     text-align: center;
     font-size: 20px;
@@ -139,4 +139,8 @@ h2{
     text-align: center;
     font-family: "Madimi One", sans-serif;
     padding-top: 50px;
+}
+/* PREGUNTAS */
+form{
+    padding: 20px;
 }
