--- a/estilos.css
+++ b/estilos.css
@@ -128,6 +128,7 @@ footer h4{
 }
 /* ACERCA DE */
 .textoaceraDe{
+    font-family: 'Poppins', sans-serif;
     text-align: center;
     font-size: 20px;
     padding-top: 60px;
@@ -147,4 +148,11 @@ form{
 /* CONTACTO */
 .negocio{
     font-size: 13px;
+}
+.contacto{
+    padding: 20px;
+    text-align: center;
+    font-size: 20px; 
+    font-family: 'Poppins', sans-serif;
+    font-weight: bold;
 }
