--- a/estilos.css
+++ b/estilos.css
@@ -129,8 +129,10 @@ footer h4{
 /* ACERCA DE */
 .textoaceraDe{
     font-family: 'Poppins', sans-serif;
+    font-weight: bold;
+    color: black;
     text-align: center;
-    font-size: 20px;
+    font-size: 30px;
     padding-top: 60px;
 }
 .footerAcerca{
@@ -155,4 +157,33 @@ form{
     font-size: 20px; 
     font-family: 'Poppins', sans-serif;
     font-weight: bold;
+}
+/* MEDIA QUERIES */
+@media only screen and (min-width:750px) and (max-width:1199px){
+    .tercera{
+        grid-template-columns: 1fr 1fr;
+        grid-gap: 20px;
+    }
+    .cohete{
+        grid-column: 1/3;
+    }
+    .negocio{
+        font-size: medium;
+    }
+}
+@media only screen and (min-width:1200px){
+
+    .primera{
+        grid-template-columns: 1fr 1fr 1fr;
+    }
+    .tercera{
+        grid-template-columns: 1fr 1fr;
+        grid-gap: 20px;
+    }
+    .cohete{
+        grid-column: 1/3;
+    }
+    .negocio{
+        font-size: medium;
+    }
 }
