--- a/estilos.css
+++ b/estilos.css
@@ -153,6 +153,7 @@ form{
 }
 .contacto{
     padding: 20px;
+    color: black;
     text-align: center;
     font-size: 20px; 
     font-family: 'Poppins', sans-serif;
@@ -170,6 +171,9 @@ form{
     .negocio{
         font-size: medium;
     }
+    .contacto{
+        font-size: 30px ;
+    }
 }
 @media only screen and (min-width:1200px){
 
@@ -185,5 +189,8 @@ form{
     }
     .negocio{
         font-size: medium;
+    }
+    .contacto{
+        font-size: 30px;
     }
 }
