--- a/estilos.css
+++ b/estilos.css
@@ -136,7 +136,7 @@ footer h4{
     padding-top: 60px;
 }
 .footerAcerca{
-    margin-top: 300px;
+    margin-top: 100px;
 }
 h2{
     text-align: center;
@@ -146,6 +146,9 @@ h2{
 /* PREGUNTAS */
 form{
     padding: 20px;
+}
+.footerPreguntas{
+    margin-top: 100px;
 }
 /* CONTACTO */
 .negocio{
