--- a/scss/_responsive.scss
+++ b/scss/_responsive.scss
@@ -16,6 +16,14 @@
     .contacto {
         font-size: 30px;
     }
+
+    .textoservicios{
+        font-size: 30px;
+    }
+
+    .textoaceraDe{
+        font-size: 30px;
+    }
 }
 
 @media only screen and (min-width: 1200px) {
@@ -37,6 +45,14 @@
     }
 
     .contacto {
+        font-size: 30px;
+    }
+
+    .textoservicios{
+        font-size: 30px;
+    }
+
+    .textoaceraDe{
         font-size: 30px;
     }
 }
