--- a/scss/_servicios.scss
+++ b/scss/_servicios.scss
@@ -1,9 +1,10 @@
 /* SERVICIOS */
 .textoservicios{
-    font-size: 30px;
+    font-size: 20px;
     font-family: 'Poppins', sans-serif;
     color: black;
     font-weight: bold;
     text-align: center;
     padding: 20px;
+    margin-top: 50px;
 }
