--- a/css/estilos.css
+++ b/css/estilos.css
@@ -16,6 +16,7 @@ img {
 .navbar {
   background-color: #0a0b5c;
   width: 100%;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 h4 {
@@ -29,6 +30,12 @@ a {
   font-size: 15px;
 }
 
+.nav-item a:hover {
+  background-color: blue;
+  border-radius: 5px;
+  transition: 0.5s;
+}
+
 .nav-item {
   display: flex;
   justify-content: end !important;
@@ -36,8 +43,8 @@ a {
 
 .call1 {
   text-align: center;
-  font-family: "Madimi One", sans-serif;
-  padding: 20%;
+  padding: 15%;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 .call1 a {
   text-decoration: none;
@@ -46,9 +53,15 @@ a {
   background-color: #0c0eff;
   border-radius: 10px;
 }
+.call1 a:hover {
+  background-color: #0a0b5c;
+  transition: 0.5s;
+}
 .call1 h2 {
   color: black;
-  margin-bottom: 20px;
+  margin-bottom: 50px;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-weight: bold;
 }
 
 .primera {
@@ -62,12 +75,16 @@ a {
   padding: 10px;
 }
 .primera h2 {
-  padding: 20px;
-  font-family: "Madimi One", sans-serif;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-weight: bold;
+}
+.primera p {
+  margin-top: 40px;
 }
 
 .sec1 {
   padding: 25px;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 .tercera {
@@ -75,14 +92,16 @@ a {
   grid-template-columns: 1fr;
   text-align: center;
   padding: 50px;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 .tercera h2 {
   padding: 20px;
-  font-family: "Madimi One", sans-serif;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-weight: bold;
 }
 
 .sec3 {
-  border: 5px solid #9c9c9c;
+  border: 5px solid #0c0eff;
   border-radius: 10px;
   padding: 15px;
   margin-top: 30px;
@@ -108,8 +127,7 @@ footer img {
 }
 footer p {
   font-size: 15px;
-  font-family: "Poppins", "sans-serif";
-  font-weight: bold;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 footer h4 {
   color: white;
@@ -125,9 +143,7 @@ footer h4 {
 
 /* ACERCA DE */
 .textoaceraDe {
-  font-family: "Poppins", sans-serif;
-  font-weight: bold;
-  color: black;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
   text-align: center;
   font-size: 20px;
   padding-top: 60px;
@@ -137,15 +153,18 @@ footer h4 {
   margin-top: 100px;
 }
 
-h2 {
+.tituloAcerca {
+  color: black;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-weight: bold;
   text-align: center;
-  font-family: "Madimi One", sans-serif;
   padding-top: 50px;
 }
 
 /* CONTACTO */
 .negocio {
   font-size: 13px;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 .contacto {
@@ -153,8 +172,7 @@ h2 {
   color: black;
   text-align: center;
   font-size: 20px;
-  font-family: "Poppins", sans-serif;
-  font-weight: bold;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 .boton {
@@ -165,6 +183,7 @@ h2 {
 form {
   padding: 20px;
   margin-top: 50px;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 .footerPreguntas {
@@ -178,12 +197,10 @@ form {
 /* SERVICIOS */
 .textoservicios {
   font-size: 20px;
-  font-family: "Poppins", sans-serif;
-  color: black;
-  font-weight: bold;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
   text-align: center;
   padding: 20px;
-  margin-top: 50px;
+  margin-top: 40px;
 }
 
 /* MEDIA QUERIES */
@@ -209,6 +226,9 @@ form {
   }
 }
 @media only screen and (min-width: 1200px) {
+  .call1 h2 {
+    font-size: 50px;
+  }
   .primera {
     grid-template-columns: 1fr 1fr 1fr;
   }
