--- a/scss/_acercaDe.scss
+++ b/scss/_acercaDe.scss
@@ -1,9 +1,7 @@
 /* ACERCA DE */
 
 .textoaceraDe {
-    font-family: "Poppins", sans-serif;
-    font-weight: bold;
-    color: black;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
     text-align: center;
     font-size: 20px;
     padding-top: 60px;
@@ -13,8 +11,10 @@
     margin-top: 100px;
 }
 
-h2 {
+.tituloAcerca{
+    color: black;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-weight: bold;
     text-align: center;
-    font-family: "Madimi One", sans-serif;
     padding-top: 50px;
 }
