--- a/scss/_contacto.scss
+++ b/scss/_contacto.scss
@@ -2,6 +2,7 @@
 
 .negocio {
     font-size: 13px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 .contacto {
@@ -9,8 +10,7 @@
     color: black;
     text-align: center;
     font-size: 20px;
-    font-family: 'Poppins', sans-serif;
-    font-weight: bold;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 .boton{
     margin-top: 30px;
