--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -12,6 +12,7 @@ img {
 .navbar {
     background-color: $color-azul-oscuro;
     width: 100%;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 h4 {
@@ -21,8 +22,13 @@ h4 {
 }
 
 a {
-    color: $color-blanco !important;
+    color: white !important;
     font-size: 15px;
+}
+.nav-item a:hover{
+    background-color: blue;
+    border-radius: 5px;
+    transition: 0.5s;
 }
 
 .nav-item {
@@ -32,8 +38,8 @@ a {
 
 .call1 {
     text-align: center;
-    font-family: "Madimi One", sans-serif;
-    padding: 20%;
+    padding: 15%;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 
     a {
         @include anclas;
@@ -41,10 +47,16 @@ a {
         background-color: $color-azul;
         border-radius: 10px;
     }
+    a:hover{
+        background-color: $color-azul-oscuro;
+        transition: 0.5s;
+    }
 
     h2 {
         color: black;
-        margin-bottom: 20px;
+        margin-bottom: 50px;
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+        font-weight: bold;
     }
 }
 
@@ -60,13 +72,17 @@ a {
     }
 
     h2 {
-        padding: 20px;
-        font-family: "Madimi One", sans-serif;
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+        font-weight: bold;
+    }
+    p{
+        margin-top: 40px;
     }
 }
 
 .sec1 {
     padding: 25px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 .tercera {
@@ -74,15 +90,17 @@ a {
     grid-template-columns: 1fr;
     text-align: center;
     padding: 50px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 
     h2 {
         padding: 20px;
-        font-family: "Madimi One", sans-serif;
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+        font-weight: bold;
     }
 }
 
 .sec3 {
-    border: 5px solid $color-gris;
+    border: 5px solid $color-azul;
     border-radius: 10px;
     padding: 15px;
     margin-top: 30px;
@@ -109,8 +127,7 @@ footer {
 
     p {
         font-size: 15px;
-        font-family: 'Poppins', 'sans-serif';
-        font-weight: bold;
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
     }
 
     h4 {
