--- a/scss/_servicios.scss
+++ b/scss/_servicios.scss
@@ -1,10 +1,8 @@
 /* SERVICIOS */
 .textoservicios{
     font-size: 20px;
-    font-family: 'Poppins', sans-serif;
-    color: black;
-    font-weight: bold;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
     text-align: center;
     padding: 20px;
-    margin-top: 50px;
+    margin-top: 40px;
 }
